apps/base/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Linkding
    gethomepage.dev/description: Bookmark Manager
    gethomepage.dev/group: Office
    gethomepage.dev/icon: linkding.png
    gethomepage.dev/app: linkding
    gethomepage.dev/pod-selector: app=linkding
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bookmarks.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: bookmarks.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
